[gd_scene load_steps=2 format=3 uid="uid://b45ft45kvag20"]

[ext_resource type="Script" path="res://main.gd" id="1_1wutn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1wutn")

[node name="Player1_time" type="Label" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="Player2_time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="Reset_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "RESET"

[node name="Player1_button" type="Button" parent="."]
layout_mode = 0
offset_top = 312.5
offset_right = 82.0
offset_bottom = 343.5
text = "Jugador 1"

[node name="Player2_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Jugador2"
alignment = 0
